fix: layout issue when toggle mobile operation button

--- a/example/example.less
+++ b/example/example.less
@@ -1,54 +1,58 @@
-#root,body,html{
-    height:100%
+#root,
+body,
+html {
+  height: 100%;
 }
-body,html{
-    margin:0;
-    padding: 0;
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
-body{
-    background: #C8C8A9;
-    overflow:hidden;
+body {
+  background: #c8c8a9;
+  overflow: hidden;
 }
-h2.example-title{
-    padding: 40px;
-    font-weight: 500
+h2.example-title {
+  padding: 40px;
+  font-weight: 500;
+  margin: 0;
 }
-button{
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: 400;
-    text-align: center;
-    touch-action: manipulation;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    white-space: nowrap;
-    line-height: 1.15;
-    padding: 8px 30px;
-    font-size: 16px;
-    border-radius: 4px;
-    height: 35px;
-    user-select: none;
-    transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
-    position: relative;
-    color: rgba(0,0,0,.65);
-    background-color: #fff;
-    border-color: #e8e8e8;
-    outline: none;
-    margin: 0 20px;
-    &:hover{
-        background-color: #31c27c;
-        color:#fff;
-        border-color:#31c27c
-    }
-    >span{
-        pointer-events: none;
-    }
+button {
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: 400;
+  text-align: center;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  line-height: 1.15;
+  padding: 8px 30px;
+  font-size: 16px;
+  border-radius: 4px;
+  height: 35px;
+  user-select: none;
+  transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  position: relative;
+  color: rgba(0, 0, 0, 0.65);
+  background-color: #fff;
+  border-color: #e8e8e8;
+  outline: none;
+  margin: 0 20px;
+  &:hover {
+    background-color: #31c27c;
+    color: #fff;
+    border-color: #31c27c;
+  }
+  > span {
+    pointer-events: none;
+  }
 }
 
-label{
-    cursor: pointer;
-    font-size:16px;
-    display: inline-block;
-    margin:20px;
+label {
+  cursor: pointer;
+  font-size: 16px;
+  display: inline-block;
+  margin: 20px;
 }
